Fix search filter-table alignment.

--- a/src/app/shared/components/search-filter/search-filter/search-filter.component.scss
+++ b/src/app/shared/components/search-filter/search-filter/search-filter.component.scss
@@ -1,6 +1,6 @@
 .mat-form-field {
     margin-left: 10%;
-    width: 80%;
+    width: calc(80% - 5px);
     background-color: white;
     position: relative;
     margin-top: 15px;
